--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "littlecube2019.github.io"
 languageCode = "zh-TW"
 title = "Little Cube`s box"
 theme = "hugo-theme-fuji"
